backmerge and fix

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -448,8 +448,8 @@
           <% end %>
         </div>
       </div>
-      <br><strong><%= @performances.count %></strong><br>
-    </div>
+      <strong><%= @performances.count %></strong>
+    </div><br><br><br>
   </section>
 
   <section id="news" class="gray-section">
