--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -349,15 +349,15 @@
       <div class="col-md-3 text-center wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">
         <div class="m-t-lg">
           <i><h2><strong>Чанар</strong></h2></i>
-          <i>чанар стандартын шаардлага хангасан түүхий эдээр бат бөх, баталгаат хугацаа бүхий бүтээгдэхүүн үйлдвэрлэнэ.</i>
+          <i>Чанар стандартын шаардлага хангасан түүхий эдээр бат бөх, баталгаат хугацаа бүхий бүтээгдэхүүн үйлдвэрлэнэ.</i>
         </div>
         <div class="m-t-lg">
           <i><h2><strong>Туршлага</strong></h2></i>
-          <i>салбартаа 20-иод жилийн туршлагатай, анхдагч төмөр хийцийн үйлдвэрүүдийн нэг.</i>
+          <i>Салбартаа 20-иод жилийн туршлагатай, анхдагч төмөр хийцийн үйлдвэрүүдийн нэг.</i>
         </div>
         <div class="m-t-lg align-content-center">
           <i><h2><strong>Итгэл найдвар</strong></h2></i>
-          <i>бүтээгдэхүүнээ түргэн шуурхай гүйцэтгэж, таны итгэл найдвартай түнш, хамтрагч байж чадна.</i>
+          <i>Бүтээгдэхүүнээ түргэн шуурхай гүйцэтгэж, таны итгэл найдвартай түнш, хамтрагч байж чадна.</i>
         </div>
       </div>
       <div class="col-md-6 text-center wow flipInX" style="visibility: visible;">
