--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -35,18 +35,6 @@
       <li data-target="#inSlider" data-slide-to="0" class="active"></li>
       <li data-target="#inSlider" data-slide-to="1" class=""></li>
       <li data-target="#inSlider" data-slide-to="3" class=""></li>
-      <li data-target="#inSlider" data-slide-to="4" class=""></li>
-      <li data-target="#inSlider" data-slide-to="5" class=""></li>
-      <li data-target="#inSlider" data-slide-to="6" class=""></li>
-      <li data-target="#inSlider" data-slide-to="7" class=""></li>
-      <li data-target="#inSlider" data-slide-to="8" class=""></li>
-      <li data-target="#inSlider" data-slide-to="9" class=""></li>
-      <li data-target="#inSlider" data-slide-to="10" class=""></li>
-      <li data-target="#inSlider" data-slide-to="11" class=""></li>
-      <li data-target="#inSlider" data-slide-to="12" class=""></li>
-      <li data-target="#inSlider" data-slide-to="13" class=""></li>
-      <li data-target="#inSlider" data-slide-to="14" class=""></li>
-      <li data-target="#inSlider" data-slide-to="15" class=""></li>
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
@@ -54,28 +42,25 @@
           <div class="carousel-caption">
             <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
             <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-            <p>
-              <a class="btn btn-lg btn-primary" href="" role="button">төмөр хийц</a>
-              <a class="caption-link" href="#" role="button">хөгжилрүү хамтдаа</a>
-            </p>
           </div>
           <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/smit_header.jpg" %>
+            <%= image_tag "landing/blacksmith5.png" %>
           </div>
         </div>
         <!-- Set background for slide in css -->
         <div class="header-back one">
-          <%= image_tag "landing/header_1.png" %>
+          <%= image_tag "landing/header1.png"%>
         </div>
       </div>
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption">
             <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith2.jpeg" %>
+            <p><h5>АЛСЫН ХАРАА</h5> <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+            <p>
+              <a class="btn btn-lg btn-primary" href="" role="button">төмөр хийц</a>
+              <a class="caption-link" href="#" role="button">хөгжилрүү хамтдаа</a>
+            </p>
           </div>
         </div>
         <!-- Set background for slide in css -->
@@ -89,193 +74,10 @@
             <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
             <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
           </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith3.png" %>
-          </div>
         </div>
         <!-- Set background for slide in css -->
         <div class="header-back one">
           <%= image_tag "landing/header_3.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith4.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header_4.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith5.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header_top_one.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith6.jpg" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header_top_two.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith3.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header_top_five.png" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith3.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header1.png" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith4.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header2.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith3.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header3.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith3.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header4.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith3.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header5.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith5.png" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/header6.png" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/smit_header.jpg" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/smit_header.jpg" %>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-          </div>
-          <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
-            <%= image_tag "landing/blacksmith_dr.jpg" %>
-          </div>
-        </div>
-        <!-- Set background for slide in css -->
-        <div class="header-back one">
-          <%= image_tag "landing/blacksmith_pop.jpg" %>
         </div>
       </div>
     </div>
@@ -361,7 +163,7 @@
         </div>
       </div>
       <div class="col-md-6 text-center wow flipInX" style="visibility: visible;">
-        <%= image_tag "landing/blacksmith_dr.jpg", alt: "dashboard", class: "img-fluid" %>
+        <%= image_tag "landing/perspective.png", alt: "dashboard", class: "img-fluid" %>
       </div>
       <div class="col-md-3 text-center wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;">
         <div class="m-t-lg">
@@ -393,13 +195,16 @@
           <div class="col-sm-3 wow fadeInLeft animated">
             <div class="ibox">
               <div class="ibox-content product-box">
-                <div class="product-imitation">
                   <% if product.images.attached? %>
-                    <% product.images.each do |image| %>
-                      <%= image_tag(url_for(image), style: "width:100%; height:100%;") %>
-                    <% end %>
+                    <div>
+                      <% product.images.each do |image| %>
+                        <%= image_tag(url_for(image), style: "width:100%") %>
+                      <% end %>
+                    </div>
+                  <% else %>
+                    <div class="product-imitation">
+                    </div>
                   <% end %>
-                </div>
                 <div class="product-desc"><span class="product-price"><%= product.price %></span>
                   <a href="" class="product-name"><%= product.name %></a>
                   <div class="small m-t-xs"><%= product.note %></div>
@@ -425,20 +230,20 @@
       <div class="col-lg-10">
         <div class="slick_demo_2">
           <% @performances.each do |performance| %>
-            <div>
+            <div class="wow fadeInRightBig animated">
               <div class="ibox-content">
                 <div class="border-bottom">
                   <h2><%= performance.title %></h2>
                 </div>
                 <div class="row">
-                  <div class="col-md-5">
+                  <div class="col-md-8">
                     <% if performance.images.attached? %>
                       <% performance.images.each do |image| %>
-                        <%= image_tag(url_for(image), style: "width: 100%; height:8em;") %>
+                        <%= image_tag(url_for(image), style: "width: 100%") %>
                       <% end %>
                     <% end %>
                   </div>
-                  <div class="col-md-7">
+                  <div class="col-md-4">
                     <p><i class="fa fa-calendar"></i><i> <%= performance.period %></i></p>
                     <h5><i><%= performance.subject %></i></h5>
                   </div>
@@ -540,7 +345,7 @@
       <div class="row m-b-lg justify-content-center">
         <div class="col-lg-3 ">
           <address>
-            <abbr title="Phone"><i class="fa fa-mobile-phone"></i></abbr> <i>99106208, 99813884</i><br><br>
+            <abbr title="Phone"><i class="fa fa-mobile-phone"></i></abbr> <i>99106208, 99927294</i><br><br>
             <abbr title="Email"><i class="fa fa-envelope"></i></abbr> <i>info@guulindush.mn</i>
           </address>
         </div>
