--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -41,7 +41,12 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+            <h1>АЛСЫН ХАРАА</h1>
+            <h2>Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</h2>
+            <p>
+              <a class="btn btn-lg btn-primary" href="" role="button">төмөр хийц</a>
+              <a class="caption-link" href="" role="button">хөгжилрүү хамтдаа</a>
+            </p>
           </div>
           <div class="carousel-image wow zoomIn animated" style="visibility: visible;">
             <%= image_tag "landing/blacksmith5.png" %>
@@ -55,12 +60,12 @@
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p><h5>АЛСЫН ХАРАА</h5> <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
-            <p>
-              <a class="btn btn-lg btn-primary" href="" role="button">төмөр хийц</a>
-              <a class="caption-link" href="#" role="button">хөгжилрүү хамтдаа</a>
-            </p>
+            <h1>ЭРХЭМ ЗОРИЛГО</h1>
+            <h2>Бид монгол хүмүүн, монгол баялаг,<br>
+               эрүүл аюулгүй ажиллагааг эрхэмлэж,<br>
+               хэрэглэгчдийнхээ итгэл найдварт түнш байж,<br>
+               Монгол улсынхаа хөгжилд хувь нэмрээ оруулсан<br>
+               шилдэг баялаг бүтээгч байгууллага болно.</h2>
           </div>
         </div>
         <!-- Set background for slide in css -->
@@ -71,8 +76,12 @@
       <div class="carousel-item">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Бид<br>Монголыг хөгжүүлэх <br>монгол баялгийг бүтээнэ.</h1>
-            <p>АЛСЫН ХАРАА:  <br> Үндэсний тэргүүлэгч баялаг бүтээгч байгууллага болно.</p>
+            <h1>ҮНЭТ ЗҮЙЛ</h1>
+            <h2>• Багийн ажиллагаа<br>
+                • Бүтээлч сэтгэлгээ<br>
+                • Бүтээгдэхүүний чанар<br>
+                • Байгууллагын ёс зүй<br>
+                • Байнгын аюулгүй ажиллагаа</h2>
           </div>
         </div>
         <!-- Set background for slide in css -->
@@ -111,23 +120,23 @@
   <section id="testimonials" class="navy-section " style="margin-top: 0">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center wow zoomIn animated" style="visibility: visible;">
+        <div class="col-lg-12 text-center" style="visibility: visible;">
           <h1><i>Хамтрагч байгууллагууд</i></h1>
           <div class="ibox ">
-            <div class="lightBoxGallery wow bounce">
-              <%= image_tag "partner/bayan_airag.jpg", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/bridge_construction.jpeg", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/cu.png", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/emart.png", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/energy_resource.jpg", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/ganguur.jpeg", style: "width: 100px; heigh: 100px;" %><br>
-              <%= image_tag "partner/garden_city.png", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/mcs.jpg", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/MobiCom logo.jpg", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/nomin.jpg", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/oyutolgoi.jpg", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/river_garden.jpeg", style: "width: 100px; heigh: 100px;" %>
-              <%= image_tag "partner/time_square.png", style: "width: 100px; heigh: 100px;" %>
+            <div class="lightBoxGallery">
+              <%= image_tag "partner/bayan_airag.jpg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/bridge_construction.jpeg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/cu.png", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/emart.png", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/energy_resource.jpg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/ganguur.jpeg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %><br>
+              <%= image_tag "partner/garden_city.png", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/mcs.jpg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/MobiCom logo.jpg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/nomin.jpg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/oyutolgoi.jpg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/river_garden.jpeg", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
+              <%= image_tag "partner/time_square.png", class: "wow pulse", style: "width: 100px; heigh: 100px;" %>
             </div>
           </div>
           <div class="testimonials-text">
@@ -192,8 +201,8 @@
       </div>
       <div class="row">
         <% @products.each do |product| %>
-          <div class="col-sm-3 wow fadeInLeft animated">
-            <div class="ibox">
+          <div class="col-sm-3">
+            <div class="ibox wow swing animated">
               <div class="ibox-content product-box">
                   <% if product.images.attached? %>
                     <div>
@@ -267,7 +276,7 @@
       </div>
       <div class="new-block row m-t-lg">
         <div class="col-lg-12">
-          <div class="tabs-container wow fadeInUpBig animated">
+          <div class="tabs-container wow rotateInDownLeft">
             <div class="tabs-left">
               <ul class="nav nav-tabs">
                 <% i = 0 %>
@@ -325,10 +334,12 @@
           <div class="navy-line"></div>
           <h1><i>Нээлттэй ажлын байр</i></h1>
           <br><br><br><br>
-          <strong>Та Гуулин Дөш ХХК-д нээлттэй ажлын байрны талаар <br>
-             мэдээлэл авах бол biznetwork.mn хуудас руу шилжинэ үү.</strong>
-          <br><br><br><br>
-          <%= link_to "АНКЕТ ТАТАЖ АВАХ", "https://www.biznetwork.mn/company/guulin-dush?fbclid=IwAR0RcICOjKHGQ5RPhqQvZo0k2IL6fbPNIEFCskC33JdG5QX6yh-ON8AZ3WU", target: :_blank %>
+          <div class="wow fadeIn animated">
+            <strong>Та Гуулин Дөш ХХК-д нээлттэй ажлын байрны талаар <br>
+              мэдээлэл авах бол biznetwork.mn хуудас руу шилжинэ үү.</strong>
+            <br><br><br><br>
+            <%= link_to "АНКЕТ ТАТАЖ АВАХ", "https://www.biznetwork.mn/company/guulin-dush?fbclid=IwAR0RcICOjKHGQ5RPhqQvZo0k2IL6fbPNIEFCskC33JdG5QX6yh-ON8AZ3WU", target: :_blank %>
+          </div>
         </div>
       </div>
     </div>
