--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -253,8 +253,10 @@
                     <% end %>
                   </div>
                   <div class="col-md-5">
-                    <p><i class="fa fa-calendar"></i><i> <%= performance.period %></i></p>
-                    <h5><i><%= performance.subject %></i></h5>
+                    <div style=width: 100%">
+                      <p><i class="fa fa-calendar"></i><i> <%= performance.period %></i></p>
+                      <h5><i><%= performance.subject %></i></h5>
+                    </div>
                   </div>
                 </div>
               </div>
