--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -171,7 +171,7 @@
           <i>Бүтээгдэхүүнээ түргэн шуурхай гүйцэтгэж, таны итгэл найдвартай түнш, хамтрагч байж чадна.</i>
         </div>
       </div>
-      <div class="col-md-6 text-center wow flipInX" style="visibility: visible;">
+      <div class="col-md-6 text-center wow flipInX" style="visibility: visible;"><br>
         <%= image_tag "landing/smit_header.jpg", alt: "dashboard", class: "img-fluid" %>
       </div>
       <div class="col-md-3 text-center wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;">
