--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
         <%= yield %>
       </div>
     </div>
+    <%= render "layouts/facebook_chat" %>
   </body>
 
   <%= render "layouts/footer" %>
