--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       </nav>
       <div id="page-wrapper" class="gray-bg" style="min-height: 980px;">
         <%= yield %>
+        <%= render "layouts/facebook_chat" %>
       </div>
     </div>
   </body>
