--- a/app/views/layouts/landing_page.erb
+++ b/app/views/layouts/landing_page.erb
@@ -12,6 +12,8 @@
 
   <body>
     <%= render "layouts/header" %>
+    <%= yield %>
     <%= render "layouts/footer" %>
+    <%= render "layouts/facebook_chat" %>
   </body>
 </html>
