--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>DOIronCast</title>
+    <p>this is application html</p>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
