--- a/app/views/layouts/landing_page.erb
+++ b/app/views/layouts/landing_page.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>MetalCraft</title>
+    <p>this is landing page html</p>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
