--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -387,3 +387,5 @@
 <%= javascript_pack_tag 'top/index' %>
 
 <%= render "layouts/facebook_chat" %>
+
+google-site-verification=0dW8vh937HlkT9xAAIyZh2p8ezICtMDSaOeea79HZmg
