google search verification

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -388,4 +388,5 @@
 
 <%= render "layouts/facebook_chat" %>
 
-google-site-verification=0dW8vh937HlkT9xAAIyZh2p8ezICtMDSaOeea79HZmg
+<meta name="google-site-verification" content="0dW8vh937HlkT9xAAIyZh2p8ezICtMDSaOeea79HZmg" />
+google-site-verification: googlebe82cd557233aa7b.html
