gogole verify tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>DOIronCast</title>
+    <meta name="google-site-verification" content="0dW8vh937HlkT9xAAIyZh2p8ezICtMDSaOeea79HZmg" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
